:wrench: Fix Instagram posts loading offscreen by adding a loading spinner

--- a/src/travel/index.module.scss
+++ b/src/travel/index.module.scss
@@ -48,7 +48,17 @@
 	margin-top: 6.25rem;
 	max-width: 100vw;
 	overflow: hidden;
-	display: hidden;
+	flex-shrink: 0;
+}
+
+.loadingSpinner {
+	color: $defaultYellow;
+	display: flex;
+	justify-content: center;
+}
+
+.loadingEmbed {
+	display: none;
 }
 
 .gridContainer {
